[gd_scene load_steps=5 format=2]

[ext_resource path="res://menus/prompt.gd" type="Script" id=1]
[ext_resource path="res://fonts/Roboto-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 2 )

[node name="Prompt" type="CanvasLayer"]
layer = 10
script = ExtResource( 1 )

[node name="Display" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Display"]
margin_right = 480.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 0.392157 )

[node name="ColorRect2" type="ColorRect" parent="Display"]
margin_top = 110.0
margin_right = 480.0
margin_bottom = 220.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Display/ColorRect2"]
margin_left = 30.0
margin_right = 450.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Text prompt are you sure?"
align = 1
valign = 1
autowrap = true

[node name="Ok" type="Button" parent="Display/ColorRect2"]
margin_left = 270.0
margin_top = 70.0
margin_right = 350.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 2 )
text = "Continue"

[node name="Cancel" type="Button" parent="Display/ColorRect2"]
margin_left = 130.0
margin_top = 70.0
margin_right = 210.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 2 )
text = "Cancel"
[connection signal="pressed" from="Display/ColorRect2/Ok" to="." method="_on_Ok_pressed"]
[connection signal="pressed" from="Display/ColorRect2/Cancel" to="." method="_on_Cancel_pressed"]
